# changAI

./: .gitignore  =0.23.0  README.md  S1_ROBERTO.ipynb  meta.json  pyproject.toml  requirements.txt  s1_roberta_ipynb_drive.ipynb
Changai/notebooks/: Intent_classifier.ipynb
changai/: ai_translate.py  embeddings.py  hooks.py  install.py  modules.txt  replicate.yaml  requirement.txt  requirements.txt  test.py
changai/api/: prediction_pipeline.py
changai/changai/: S1_ROBERTO (1).ipynb  cog.yaml  predict.py  requirements.txt  schema_joins.yaml  schema_options.yaml  scripts.py
changai/changai/Actual schemas/: schema-include-zatca_CREATE_ONLY.sql  schema.sql
changai/changai/Datasets/: Query2NL.json  intent_classification_erp_dataset_updated.json
changai/changai/Datasets_2/: multi_doc_qstns.json
changai/changai/Datasets_2_v1/: meta.json  standard_meta.json
changai/changai/api/: business_keywords.json  business_tables.py  changai_table_names.json  erp_dictionary.txt  helpdesk_api.py  pleasantries.py  pleasantry.json  predict.py  prediction_pipeline.py  trigrams.py
changai/changai/data/: master_data.yaml  (+1 more)
changai/fixtures/: doctype.json  page.json
changai/notebooks/: Changai_Gradio_Sandbox.ipynb  Intent_classifier.ipynb  Thread_Handling_Demo.ipynb  s1_roberta.ipynb  s2_flan.ipynb  s2_sbert.ipynb  s3_flan_query.ipynb
changai/s1 Model/: S1_ROBERTO.ipynb
changai/validation_data/: validation_data.py
frontend/: .gitignore  .gitkeep  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css  tailwind.css
(+295 files in other folders)
