[project]
name = "changai"
authors = [
    { name = "ERpGulf", email = "support@erpgulf.com"}
]
description = "ChangAI"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

dependencies = [
    "openai==1.64.0",
    "anthropic==0.79.0",
    "google-genai==1.60.0",
    "google-auth==2.49.0.dev0",
    "google-cloud-aiplatform==1.135.0",
    "huggingface_hub",

    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-huggingface",
    "langchain-ollama",
    "langgraph",
    "langsmith",
    "transformers>=4.48.0",
    "sentence-transformers==5.1.2",
    "faiss-cpu==1.12.0",
    "numpy==1.26.4",
    "sqlglot==27.29.0",
    "PyYAML==6.0.2",
    "requests==2.32.5",
    "Jinja2==3.1.4",
    "typing_extensions==4.15.0",

    "PyQRCode==1.2.1",
    "pypng==0.20220715.0",
    "opencv-python==4.11.0.86"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]